--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -17,8 +17,8 @@ FUSE_H  = 0x5D
 AVRDUDE = avrdude -c avrispmkII -p $(DEVICE)
 
 CFLAGS  = -Iusbdrv -I. -Ilibs-device -DDEBUG_LEVEL=0
-OBJECTS = usbdrv/usbdrv.o usbdrv/usbdrvasm.o usbdrv/oddebug.o main.o modules/button.o modules/knob.o modules/output.o midi.o
-OBJECTS += hardware.o
+OBJECTS = usbdrv/usbdrv.o usbdrv/usbdrvasm.o usbdrv/oddebug.o main.o modules/button.o modules/knob.o modules/output.o
+OBJECTS += lib/hardware.o lib/midi.o lib/i2c_bb.o
 #libs-device/osccal.o
 
 COMPILE = avr-gcc -Wall -Os -DF_CPU=$(F_CPU) $(CFLAGS) -mmcu=$(DEVICE)
