--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -19,7 +19,7 @@ AVRDUDE = avrdude -c avrispmkII -p $(DEVICE)
 CFLAGS  = -Imodules -Ilib -Iusbdrv -I. -Ilibs-device -DDEBUG_LEVEL=0
 OBJECTS = usbdrv/usbdrv.o usbdrv/usbdrvasm.o usbdrv/oddebug.o main.o 
 OBJECTS += lib/hardware.o lib/midi.o lib/i2c_bb.o 
-OBJECTS += modules/rgb_led.o modules/button.o modules/knob.o modules/output.o modules/compass.o
+OBJECTS += modules/rgb_led.o modules/button.o modules/knob.o modules/output.o modules/compass.o modules/accelerometer.o
 #libs-device/osccal.o
 
 COMPILE = avr-gcc -Wall -Os -DF_CPU=$(F_CPU) $(CFLAGS) -mmcu=$(DEVICE)
