--- a/octoWebExpress/package.json
+++ b/octoWebExpress/package.json
@@ -6,12 +6,13 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "express": "~4.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
+    "debug": "~2.0.0",
+    "ejs": "~0.8.5",
+    "express": "~4.9.0",
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
-    "debug": "~2.0.0",
-    "ejs": "~0.8.5"
+    "socket.io": "^1.2.1"
   }
 }
