adds UDID Makeflag to Makefile, allows define of module ID on make

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -15,9 +15,11 @@ FUSE_L  = 0xE1
 #0x5D to disable reset
 FUSE_H  = 0x5D
 AVRDUDE = avrdude -c avrispmkII -p $(DEVICE)
-MODULE_TYPE = 7 # Default MODULE_TYPE to ANALOG_INPUT
+# #define values passed in as Make flags
+MODULE_TYPE = ANALOG_INPUT # Default MODULE_TYPE to ANALOG_INPUT
+UDID = 0xFFFF # Default DEVICE_ID (USB_CFG_DEVICE_ID)
 
-CFLAGS  = -Imodules -Ilib -Iusbdrv -I. -Ilibs-device -DDEBUG_LEVEL=0 -DMODULE_TYPE=$(MODULE_TYPE)
+CFLAGS  = -Imodules -Ilib -Iusbdrv -I. -Ilibs-device -DDEBUG_LEVEL=0 -DMODULE_TYPE=$(MODULE_TYPE) -DUDID=$(UDID)
 OBJECTS = usbdrv/usbdrv.o usbdrv/usbdrvasm.o usbdrv/oddebug.o main.o 
 OBJECTS += lib/hardware.o lib/midi.o lib/i2c_bb.o 
 OBJECTS += modules/analog_input_device.o modules/analog_output_device.o modules/digital_input_device.o modules/digital_output_device.o modules/i2c_device.o
